syntax = "proto3";

package auth;

option go_package = "./auth/proto";

service AuthService {
    rpc SignUp(SignUpRequest) returns (Response) {}
    rpc Token(TokenRequest) returns (TokenResponse) {}
    rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
    rpc ResetPassword(ResetPasswordRequest) returns (Response) {}
    rpc ConfirmSingUp(ConfirmSignUpRequest) returns (Response) {}
}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string firstName = 4;
    string lastName = 5;
    string createdOn = 6;
}

message Response {
    int64 status = 1;
    string error = 2;
}

message SignUpRequest {
    string email = 1;
    string username = 2;
    string password = 3;
    string firstName = 4;
    string lastName = 5;
}

message TokenRequest {
    string email = 1;
    string password = 2;
}
message TokenResponse {
    Response meta = 1;
    string accessToken = 2;
    string refreshToken = 3;
}

message RefreshRequest {
    string refresh = 1;
}
message RefreshResponse {
    Response meta = 1;
    string accessToken = 2;
}

message ResetPasswordRequest {
    string accessToken = 1;
}

message ConfirmSignUpRequest {
    string code = 1;
}
